--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blind Assistance App</title>
+    <title>AI Blind Navigation</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
@@ -11,26 +11,25 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4MJSt9kk07UpIlSgXno4tsuziPf-bqcI&callback=initMap" async defer></script>
 </head>
 <body>
-    <header>
-        <h1>Blind Assistance App</h1>
-    </header>
 
-    <section class="controls">
-        <input type="text" id="destination" placeholder="Enter Destination">
-        <button onclick="startNavigation()">Navigate</button>
-        <button onclick="startCamera()">Start Obstacle Detection</button>
-        <button onclick="sendSOS()">SOS Emergency</button>
-    </section>
+<header>
+    <h1>AI Blind Navigation</h1>
+</header>
 
-    <section class="map-container">
-        <div id="map"></div>
-    </section>
+<section class="map-container">
+    <h2>Navigation Map</h2>
+    <input type="text" id="destination" placeholder="Enter destination">
+    <button onclick="startNavigation()">Start Navigation</button>
+    <button onclick="sendSOS()">Send SOS</button>
+    <div id="map"></div>
+</section>
 
-    <section class="camera-container">
-        <video id="video" autoplay playsinline></video>
-        <canvas id="canvas"></canvas>
-    </section>
+<section class="camera-container">
+    <h2>Obstacle Detection</h2>
+    <video id="video" autoplay playsinline></video>
+    <canvas id="canvas"></canvas>
+    <p id="status">Detecting...</p>
+</section>
 
-    <p id="status">Status: Waiting for input...</p>
 </body>
 </html>
