--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4MJSt9kk07UpIlSgXno4tsuziPf-bqcI&callback=initMap" async defer></script>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header>
@@ -108,6 +109,14 @@
         }
 
         window.onload = initYOLOv5ONNX;
+    // Registering Service Worker for PWA
+if ("serviceWorker" in navigator) {
+    window.addEventListener("load", () => {
+        navigator.serviceWorker.register("./service-worker.js").then(() => {
+            console.log("Service Worker Registered");
+        });
+    });
+}
     </script>
 </body>
 </html>
