--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4MJSt9kk07UpIlSgXno4tsuziPf-bqcI&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4MJSt9kk07UpIlSgXno4tsuziPf-bqcIEY&callback=initMap" async defer></script>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -40,30 +40,24 @@
             const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
             video.srcObject = stream;
 
-            const session = await ort.InferenceSession.create('https://github.com/ultralytics/yolov5/releases/download/v6.0/yolov5s.onnx');
+            const session = await ort.InferenceSession.create('https://raw.githubusercontent.com/ultralytics/yolov5/master/models/yolov5s.onnx');
 
             async function detectObjects() {
-                const tensor = tf.browser.fromPixels(video).resizeNearestNeighbor([640, 640]).toFloat().div(tf.scalar(255)).expandDims(0);
-                const results = await session.run({ images: tensor });
-
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-                const boxes = results['boxes'].data;
-                const scores = results['scores'].data;
-                const classes = results['classes'].data;
+                const inputTensor = new ort.Tensor('float32', video, [1, 3, 640, 640]);
+                const feeds = { 'images': inputTensor };
+                const output = await session.run(feeds);
+                const boxes = output['boxes'].data;
+                const scores = output['scores'].data;
 
                 for (let i = 0; i < scores.length; i++) {
                     if (scores[i] > 0.5) { // Confidence Threshold
                         const [x1, y1, x2, y2] = boxes.slice(i * 4, (i + 1) * 4);
-                        const width = x2 - x1;
-                        const height = y2 - y1;
-
-                        ctx.beginPath();
-                        ctx.rect(x1, y1, width, height);
-                        ctx.lineWidth = 2;
                         ctx.strokeStyle = 'red';
-                        ctx.stroke();
+                        ctx.lineWidth = 2;
+                        ctx.strokeRect(x1, y1, x2 - x1, y2 - y1);
                         ctx.fillStyle = 'red';
                         ctx.fillText(`Object ${Math.round(scores[i] * 100)}%`, x1, y1 - 10);
 
@@ -122,7 +116,7 @@
             });
         });
     }
-</script>
+
     </script>
 </body>
 </html>
