--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Navigation with YOLOv5 (ONNX)</title>
+    <title>AI Navigation with COCO-SSD</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4MJSt9kk07UpIlSgXno4tsuziPf-bqcIEY&callback=initMap" async defer></script>
-    <link rel="manifest" href="manifest.json">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4MJSt9kk07UpIlSgXno4tsuziPf-bqcI&callback=initMap" async defer></script>
+    <link rel="manifest" href="manifest.json">   
 </head>
 <body>
     <header>
-        <h1>AI Navigation with YOLOv5 (ONNX)</h1>
+        <h1>AI Navigation with COCO-SSD</h1>
     </header>
 
     <section class="map-container">
@@ -24,14 +25,14 @@
     </section>
 
     <section class="camera-container">
-        <h2>Obstacle Detection (YOLOv5 ONNX)</h2>
+        <h2>Obstacle Detection (COCO-SSD)</h2>
         <video id="video" autoplay playsinline></video>
         <canvas id="canvas"></canvas>
         <p id="status">Detecting...</p>
     </section>
 
     <script>
-        async function initYOLOv5ONNX() {
+        async function initCOCOSSD() {
             const video = document.getElementById('video');
             const canvas = document.getElementById('canvas');
             const ctx = canvas.getContext('2d');
@@ -40,31 +41,28 @@
             const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
             video.srcObject = stream;
 
-            const session = await ort.InferenceSession.create('https://raw.githubusercontent.com/ultralytics/yolov5/master/models/yolov5s.onnx');
+            const model = await cocoSsd.load();
 
             async function detectObjects() {
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-                const inputTensor = new ort.Tensor('float32', video, [1, 3, 640, 640]);
-                const feeds = { 'images': inputTensor };
-                const output = await session.run(feeds);
-                const boxes = output['boxes'].data;
-                const scores = output['scores'].data;
+                const predictions = await model.detect(video);
+                predictions.forEach(pred => {
+                    const [x, y, width, height] = pred.bbox;
+                    ctx.beginPath();
+                    ctx.rect(x, y, width, height);
+                    ctx.lineWidth = 2;
+                    ctx.strokeStyle = 'red';
+                    ctx.stroke();
+                    ctx.fillStyle = 'red';
+                    ctx.fillText(pred.class, x, y - 10);
 
-                for (let i = 0; i < scores.length; i++) {
-                    if (scores[i] > 0.5) { // Confidence Threshold
-                        const [x1, y1, x2, y2] = boxes.slice(i * 4, (i + 1) * 4);
-                        ctx.strokeStyle = 'red';
-                        ctx.lineWidth = 2;
-                        ctx.strokeRect(x1, y1, x2 - x1, y2 - y1);
-                        ctx.fillStyle = 'red';
-                        ctx.fillText(`Object ${Math.round(scores[i] * 100)}%`, x1, y1 - 10);
-
-                        statusText.innerText = `Warning! Obstacle detected.`;
-                        speakText(`Warning! Obstacle detected.`);
+                    if (['person', 'car', 'bicycle'].includes(pred.class)) {
+                        statusText.innerText = `Warning! Obstacle: ${pred.class}`;
+                        speakText(`Warning! ${pred.class} ahead.`);
                     }
-                }
+                });
 
                 requestAnimationFrame(detectObjects);
             }
@@ -107,8 +105,6 @@
             window.speechSynthesis.speak(speech);
         }
 
-        window.onload = initYOLOv5ONNX;
-        
     if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
             navigator.serviceWorker.register("./service-worker.js").then(() => {
@@ -116,7 +112,10 @@
             });
         });
     }
+</script>
 
-    </script>
+        window.onload = initCOCOSSD;
+        
+        </script>
 </body>
 </html>
